<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/alfa" />

            <SeekBar
                android:id="@+id/seek_bar_alpha"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/rojo" />

            <SeekBar
                android:id="@+id/seek_bar_red"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/verde" />

            <SeekBar
                android:id="@+id/seek_bar_green"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/azul" />

            <SeekBar
                android:id="@+id/seek_bar_blue"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view_color"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <Button
        android:id="@+id/button_alert_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/color_item_menu"/>

</LinearLayout>